Examples/test-suite/errors/c_bad_function_definition.i
%module xxx

// SWIG < 4.3.0 accepted this invalid code.
int x, f() { return 42; }
