Examples/test-suite/errors/c_bad_function_definition.stderr
c_bad_function_definition.i:4: Error: Syntax error - possibly a missing semicolon (';').
